@@ -1,17 +1,18 @@
-// Copyright (C) 2005-2007 Garth N. Wells.
+// Copyright (C) 2005-2009 Garth N. Wells.
 // Licensed under the GNU LGPL Version 2.1.
 //
 // Modified by Anders Logg 2006.
 // Modified by NIclas Jansson 2009.
 //
 // First added:  2005-07-05
-// Last changed: 2009-08-06
+// Last changed: 2009-08-13
 
 #ifndef __VTK_FILE_H
 #define __VTK_FILE_H
 
 #include <fstream>
 #include <string>
+#include <vector>
 #include "GenericFile.h"
 
 namespace dolfin
@@ -62,11 +63,19 @@ namespace dolfin
     // Strip path from file 
     std::string strip_path(std::string file) const;
 
+    // Compute base64 encoded stream for VTK
+    template<typename T>
+    void encode_stream(std::stringstream& stream, const std::vector<T>& data) const;
+
   private:
 
     // Compute base64 encoded stream for VTK
     template<typename T>
     void encode_inline_base64(std::stringstream& stream, const std::vector<T>& data) const;
+
+    // Compute compressed base64 encoded stream for VTK
+    template<typename T>
+    void encode_inline_compressed_base64(std::stringstream& stream, const std::vector<T>& data) const;
 
     // Most recent position in pvd file
     std::ios::pos_type mark;
